# NotebookOS

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  coverprofile.out  gateway.ansi  generate_mocks.sh  go.mod  go.sum  install.sh  install_kernel.sh  install_kernel_debug.sh  install_kernel_debug_py3-12-6.sh  ipython_kernel_config.py  kernel.ansi  pyproject.toml  run_unit_tests_swarm.sh  setup.py  tash  test.go  zmq_testing.go
.idea-bak2/: modules.xml  (+1 more)
distributed_notebook/: Makefile  Makefile_common  Makefile_darwin  Makefile_linux_amd64  Makefile_linux_arm64  __init__.py  env.mk  env_amd64.mk  pyproject.toml  test.py
distributed_notebook/connection/: __init__.py  channels.py
distributed_notebook/datasets/: __init__.py  base.py  cifar10.py  custom_dataset.py  hugging_face.py  loader.py  random.py
distributed_notebook/datasets/cv/: base.py  cifar10.py  tiny_imagenet.py
distributed_notebook/datasets/nlp/: __init__.py  aclimdb_v1.py  base.py  cola.py  imdb.py  imdb_truncated.py  util.py
distributed_notebook/datasets/speech/: __init__.py  libri_speech.py  libri_speech_torchdata.py  lirbi_speech_v2.py  parser.py
distributed_notebook/deep_learning/: __init__.py
distributed_notebook/deep_learning/configuration/: __init__.py
distributed_notebook/deep_learning/data/: __init__.py  custom_dataset.py  hugging_face.py  loader.py  random.py
distributed_notebook/deep_learning/datasets/: __init__.py  custom_dataset.py  hugging_face.py  loader.py  random.py
distributed_notebook/deep_learning/models/: __init__.py  loader.py  model.py  simple_model.py
distributed_notebook/demo/: demo.py
distributed_notebook/demo/script/: script.py  script2.py  training.py  training1.py
distributed_notebook/demo_replica/: __init__.py  __main__.py  replica.py
distributed_notebook/driver/: driver_pb2.py  driver_pb2_grpc.py
distributed_notebook/gateway/: gateway_pb2.py  gateway_pb2_grpc.py
distributed_notebook/handlers/: __init__.py  kernel_handler.py  session_handler.py
distributed_notebook/kernel/: .gitignore  __init__.py  __main__.py  execution_yield_error.py  install.py  iopub_notifier.py  iostream.py  kernel.js  kernel.py  stats.py  util.py
distributed_notebook/kernel/models/: model.py  resnet18.py
distributed_notebook/kernel/train/: __main__.py  trainer.py
distributed_notebook/logging/: color_formatter.py
distributed_notebook/logs/: __init__.py  color_formatter.py
distributed_notebook/manager/: __init__.py  distributed_kernel_manager.py  distributed_session_manager.py
distributed_notebook/models/: __init__.py  loader.py  model.py  resnet18.py  simple_model.py
distributed_notebook/models/cv/: __init__.py  inception_v3.py  resnet18.py  vgg16.py
distributed_notebook/models/nlp/: __init__.py  bert.py  gpt2.py
distributed_notebook/models/speech/: __init__.py  deep_speech.py  deep_speech2.py
distributed_notebook/provisioner/: gateway_provisioner.py  kernel_creation_error.py
distributed_notebook/smr/: Makefile  build.py  go.py  smr.c  smr.go  smr.py  smr_darwin.go  smr_go.h  smr_linux_amd64.go  smr_linux_arm64.go  smr_patch.go
distributed_notebook/smr/bak/: Makefile  build.py  smr.c  smr.go  smr.py
distributed_notebook/sync/: __init__.py  ast.py  checkpoint.py  election.py  election_handler.py  errors.py  file_log.py  future.py  log.py  log_object.py  log_pickler.py  log_pickler2.py  log_referer.py  object.py  raft_log.py  raft_log2.py  reader.py  redis_log.py  referer.py  remote_storage_log.py  s3_log.py  synchronizer.py  util.py
distributed_notebook/sync/checkpointing/: checkpointer.py  checkpointer_factory.py  factory.py  hdfs.py  local_checkpointer.py  pointer.py  redis.py  redis_checkpointer.py  remote_checkpointer.py  s3.py  s3_checkpointer.py  util.py
distributed_notebook/sync/profiler/: framer.py  pickler.py  profiler.py
distributed_notebook/sync/protocols/: __init__.py  referer.py
distributed_notebook/sync/remote_storage/: local_provider.py  redis_provider.py  remote_storage_provider.py  s3_provider.py
distributed_notebook/sync/simulated_checkpointing/: simulated_checkpointer.py
distributed_notebook/sync/storage/: error.py  local_provider.py  redis_provider.py  remote_storage_provider.py  s3_provider.py  storage_provider.py
distributed_notebook/tests/: pytorch_test.py  pytorch_test_resnet.py  pytorch_test_resnet_dlm.py  redis.conf  run.prof  run2.prof  run_unit_tests.sh  s3_test_script.py  signalkernel.py  test.ipynb  test_cola.py  test_imdb.py  test_imdb_truncated.py  test_kernel.py  test_kernel2.py  test_kernel_multigpu.py  test_kernel_multiprocess.py  test_kernel_no_smr.py  test_libri_speech.py  test_local_checkpointer.py  test_provisioner.py  test_s3.py  test_s3_checkpointer.py  test_simple_model.py  test_synchronizer.py  util.py
distributed_notebook/tests/checkpointers/: test_local_checkpointer.py  test_redis_checkpointer.py  test_s3_checkpointer.py
distributed_notebook/tests/datasets/: test_cifar10.py  test_cola.py  test_imdb_truncated.py  test_libri_speech.py  test_tiny_imagenet.py
distributed_notebook/tests/models/: test_bert.py  test_data_parallel.py  test_deep_speech.py  test_deep_speech.py.$$$  test_deep_speech2.py  test_gpt2.py  test_inception3.py  test_resnet18.py  test_simple_model.py  test_vgg.py  test_vgg16.py
distributed_notebook/tests_old/: test_python.py
smr/: a.out  (+9 more)
(+1266 files in other folders)
